# claude-code-ntfy-service

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  example-setup.sh
.claude/: settings.json
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
docs/: example-decision-hooks-config.toml  ipc-implementation-summary.md  test-decision-hooks.md
logs/: daemon.log.2025-08-13
src/: config.rs  daemon.rs  daemon_main.rs  daemon_shared.rs  lib.rs  main.rs  ntfy.rs  templates.rs
src/cli/: args.rs  commands.rs  context.rs  handlers.rs  mod.rs
src/cli/handlers/: config.rs  daemon.rs  hook.rs  templates.rs  test.rs  traits.rs
src/daemon/: config.rs  ipc.rs  ipc_server.rs  mod.rs  ntfy.rs  server.rs  shared.rs  templates.rs
src/daemon/clients/: README.md  factory.rs  mod.rs  ntfy.rs  traits.rs
src/errors/: context.rs  mod.rs  types.rs
src/hooks/: enhancer.rs  mod.rs  processor.rs  types.rs  validator.rs
src/shared/: config.rs  ipc.rs  mod.rs  templates.rs
src/shared/clients/: factory.rs  mod.rs  ntfy.rs  traits.rs
src/tests/: ipc_performance_test.rs
tests/: comprehensive_integration_tests.rs  integration_test.rs  performance_benchmark_suite.rs  simplified_integration_tests.rs  unified_client_integration.rs
tests/common/: mod.rs
