[package]
name = "claude-ntfy"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Ntfy Service"]
description = "Claude Code hook CLI tool with ntfy integration"
license = "MIT"

[[bin]]
name = "claude-ntfy"
path = "src/main.rs"

[[bin]]
name = "claude-ntfy-daemon"
path = "src/daemon.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
handlebars = "5.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
once_cell = "1.19"
flume = "0.11"
daemonize = "0.5"
tempfile = "3.10"
url = "2.5"
scopeguard = "1.2"
ctrlc = "3.4"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
