[package]
name = "claude-ntfy"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Ntfy Service"]
description = "Claude Code hook CLI tool with ntfy integration"
license = "MIT"

[lib]
name = "claude_ntfy"
path = "src/lib.rs"

[[bin]]
name = "claude-ntfy"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.14"
directories = "6.0.0"
handlebars = "6.3.2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
flume = "0.11"
daemonize = "0.5"
tempfile = "3.10"
url = "2.5"
scopeguard = "1.2"
ctrlc = "3.4"
libc = "0.2"
async-trait = "0.1.89"
rand = "0.9.2"
bincode = { version = "2.0.1", features = ["serde"] }
hostname = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
